--- a/scss/_site-header.scss
+++ b/scss/_site-header.scss
@@ -9,8 +9,7 @@
 }
 
 .language {
-    display: block;
-    text-indent: -9999px;
+    @extend %indent;
 }
 
 #lang_dropdown {
@@ -71,9 +70,9 @@ input[type="checkbox"] {
     left: 0;
     transform: translateX(-110%);
     transition: transform .2s;
-    box-shadow: 0px 0px 50px rgba(124, 107, 107, 0.25);
+    box-shadow: 50px 10px 50px rgba(124, 107, 107, 0.25);
     z-index: 1;
-    background-color: rgb(4, 17, 17);
+    background-color: rgb(176, 192, 192);
     padding-inline-start: 2rem;
     padding-block-start: 1rem;
     height: 100vh;
@@ -88,7 +87,11 @@ input[type="checkbox"] {
     line-height: 16px;
     letter-spacing: 0.1em;
     text-transform: uppercase;
-    color: #FFFFFF;
+    color: $base-colour;
+   }
+
+   .navigation_container a:hover {
+        color: $background-colour;
    }
 
    .navigation_container {
@@ -101,7 +104,7 @@ input[type="checkbox"] {
   /*Create alternative state: open /checked */
   
   input[type="checkbox"]:checked ~ header .navigation {
-    transform: translateX(50%);
+    transform: translateX(0);
   }
   
   body > input[type="checkbox"]:checked ~ .menu__label {
