--- a/scss/variables/_mixin.scss
+++ b/scss/variables/_mixin.scss
@@ -3,6 +3,10 @@
     text-indent: -9999px;
 }
 
+%indent {
+    @include text-indent;
+}
+
 @mixin nav-ul {
     list-style: none;
     margin: 0;
